force-app/main/default/objects/Metadata_Risk_Assessment__c/Metadata_Risk_Assessment__c.object-meta.xml
<CustomObject>
    <label>Metadata Risk Assessment</label>
    <pluralLabel>Metadata Risk Assessments</pluralLabel>
    <nameField>
        <label>Metadata Risk Assessment Name</label>
        <type>AutoNumber</type>
        <displayFormat>MRA-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>