force-app/main/default/objects/Metadata_Risk_Assessment__c/fields/Is_Active__c.field-meta.xml
<CustomField><fullName>Is_Active__c</fullName><defaultValue>true</defaultValue><label>Is Active</label><type>Checkbox</type></CustomField>