force-app/main/default/objects/Metadata_Risk_Assessment__c/fields/Matching_Text__c.field-meta.xml
<CustomField><fullName>Matching_Text__c</fullName><label>Matching Text</label><length>255</length><type>Text</type></CustomField>