force-app/main/default/objects/Metadata_Risk_Assessment__c/fields/Rule_Name__c.field-meta.xml
<CustomField><fullName>Rule_Name__c</fullName><label>Rule Name</label><length>255</length><type>Text</type></CustomField>